--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,21 +17,24 @@
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
+
+    <div class="field">
+        <%= f.label :account_name %><br />
+        <%= f.text_field :account_name %>
+    </div>
+
+
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-  
-  <%= f.fields_for :accounts do |ff| %>
-   <div>
-    <%= ff.label :Account_name %>
-    <%= ff.text_field :Account_name %>
-    </div>
-  <%end%>
+
 
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+
+
 
 <%= render "devise/shared/links" %>
