--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,37 @@
   <head>
     <title>Demo</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-   <p class="notice"><%= notice %></p>
-   <p class="alert"><%= alert %></p>
-     <%= yield %>
-  </body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light inverse">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse float-right" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown">
+            <% if user_signed_in? %>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <strong><%= current_user.email %></strong>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="<%=edit_user_registration_path%>">Edit profile</a>
+                <div class="dropdown-divider"></div>
+                <div class="dropdown-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %></div>
+              </div>
+            <%else%>
+                <%= link_to "Sign up", new_user_registration_path, class:"navbar-link" %>|
+                <%= link_to "Login", new_user_session_path, class:"navbar-link "%>
+            <%end%>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <%= yield %>
+</body>
 </html>
