--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,10 +3,29 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  
+  <% if params[:email1].present? %>
+  <%=f.hidden_field :account_id1, :value => @account_id1 %>
+  <%=f.hidden_field :email1, :value => @email1 %>
+
+
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email,:value => params[:email1], autocomplete: "email",readonly: true %>   
+     </div>
+   <% else %>
+
+     <div class ="field">
+       <%= f.label :email %><br/>
+       <%= f.email_field :email ,autocomplete: "email" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :account_name %><br />
+        <%= f.text_field :account_name %>
+      </div>
+    <% end %>
+ 
 
 
   <div class="field">
@@ -18,10 +37,6 @@
   </div>
 
 
-    <div class="field">
-        <%= f.label :account_name %><br />
-        <%= f.text_field :account_name %>
-    </div>
 
 
   <div class="field">
