--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,17 +1,17 @@
-    <div class="container-fluid">
-        <div class="col-md-12">
-            <div class="row">
-                <div class="col-md-4">
-                    <% @accounts.each do |account|%>
-                        <div class="row">
-                            <a href="<%= account_path(account.id) %>">
-                                <h2><%= account.account_name %></h2>
-                            </a>
-                        </div>
-                    <%end%>
-                </div>
-            </div>
-        </div>
-    </div>
+
+<div class="card bg-light mt-3 ml-3" style="max-width: 20rem;">
+  <div class="card-header">Accounts</div>
+  <div class="card-body">
+    <p class="card-text">
+     <% @accounts.each do |account|%>
+                              <a href="<%= account_path(account.id) %>">
+                                <h4><%= account.account_name %></h4>
+                              </a>
+                              <p>owner:(<%=current_user.email%>)</p>
+                          </div>
+        <%end%></p>
+
+
+
 
 
