--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,5 +1,4 @@
-<%if show_add_user_or_not(current_user.id) == "Owner"%>
-<div class="container-fluid">
+  <div class="container-fluid">
         <div class="col-md-12">
             <div class="row">
               <h1 class="text text-primary"><%=@account.account_name%> Team </h1>
@@ -9,15 +8,14 @@
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                    <h5 class="modal-title" id="myModalLabel">Invite Users for <%= @account.account_name%></h5>
+                                <h5 class="modal-title" id="myModalLabel">Invite Users for <%= @account.account_name%></h5>
                                 <button type="button" class="close" data-dismiss="modal">
                                     <span aria-hidden="true">×</span>
                                 </button>
                             </div>
                             
                             <div class="modal-body">
-	     
-					    <%= form_for :invitation , url: invitations_get_email_path(account_id: @account_id) do |form|%>
+                                <%= form_for :invitation , url: invitations_get_email_path(account_id: @account.id) do |form|%>
                                     <div class="form-control">
                                         <%= form.label :email %>
                                             <br/>
@@ -37,32 +35,95 @@
                 </div>
             </div>
         </div>
-        </div>
-          <%end%>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <table class="table table-sm table-hover table-bordered">
-                <thead>
-                    <tr>
-                        <th>Sr.no</th>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <%count = 0%>
-                    <%@users.each do |user|%>
-                        <tr class="table-warning">
-                            <td><%=count+=1%></td>
-                            <td><%=user.name%></td>
-                            <td><%=user.email%></td>
-                            <td><%=member_or_owner(user.id)%></td>
-                        </tr>
-                    <%end%>
-                </tbody>
-            </table>
-        </div>
-    </div>
+  </div>
+
+
+
+
+
+                <a id="modal-3666010" href="#modal-container-3666010" role="button" class="btn btn-primary float-right" data-toggle="modal">Add Teams</a>
+                
+                <div class="modal fade" id="modal-container-3666010" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="myModalLabel">Create teams <%= @account.account_name%></h5>
+                                <button type="button" class="close" data-dismiss="modal">
+                                    <span aria-hidden="true">×</span>
+                                </button>
+                            </div>
+                            
+                            <div class="modal-body">
+                                <%= form_for :team , url: account_teams_path(account_id: @account.id) do |form|%>
+                                    <div class="form-control">
+                                        <%= form.label :Team_name %>
+                                            <br/>
+                                            <%= form.text_field :Team_name,class:"form-control", autofocus: true, autocomplete: "email" %>
+                                        </div>
+                                    <div class="modal-footer">
+                                        <%= form.submit "Create",class: "btn btn-success" %>
+
+                                    </div>
+                                <%end%>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+  
+
+<script src="https://drvic10k.github.io/bootstrap-sortable/Scripts/bootstrap-sortable.js"></script>
+<div class="row d-flex justify-content-center mt-5">
+  <div class="col-md-10">
+    <table class="table table-hover sortable border bg-light">
+      <thead class="thead-light">
+        <tr class="d-flex">
+          <th class="col-2">
+            Sr.no
+          </th>
+          <th class="col-2">
+             NAME
+          </th>
+          <th class="col-5">
+            Email
+          </th>
+          <th class="col-3">
+            Status
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <% count =0 %>
+        <% @users.each do |user| %>
+          <tr class="d-flex">
+            <td class="col-2">
+              <%= count+=1 %>
+            </td>
+            <td class="col-2">
+              <%= user.name %>
+            </td>
+            <td class="col-5">
+              <%= user.email%>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
+
+<div class ="row">
+  <div class = "col-md-4 mt-4 ml-4">
+<% @teams.each do |u| %>
+<div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+  <div class="card-header">Team</div>
+  <div class="card-body">
+    <h5 class="card-title"><%= u.Team_name%></h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+<% end %>
+  </div>
+  <div>
+
+
+
