--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,55 +1,68 @@
-<h2>Sign up</h2>
 
+<div class="container">
+  <div class="mt-5 d-flex justify-content-lg-center">
+    <div class="col-md-7 mt-5 bg-light text-dark border border-lg-dark rounded pb-3">
+      <h2 class="text-center mt-3 text-dark">Maropost Project Management</h2>
+ 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   
   <% if params[:email1].present? %>
-  <%=f.hidden_field :account_id1, :value => @account_id1 %>
-  <%=f.hidden_field :email1, :value => @email1 %>
+  <%=f.hidden_field :acc_id1, :value => params[:acc_id1] %>
+  <%=f.hidden_field :email1, :value => params[:email1]%>
 
 
-    <div class="field">
+    <div class="form-group">
       <%= f.label :email %><br />
-      <%= f.email_field :email,:value => params[:email1], autocomplete: "email",readonly: true %>   
-     </div>
+      <%= f.email_field :email,:value => params[:email1], class:"form-control",autocomplete: "email",readonly: true %>   
+    </div>
+
+
    <% else %>
-
-     <div class ="field">
+     <div class ="form-group">
        <%= f.label :email %><br/>
-       <%= f.email_field :email ,autocomplete: "email" %>
+       <%= f.email_field :email , class:"form-control",autocomplete: "email" %>
       </div>
-
-      <div class="field">
+       
+      <div class="form-group">
         <%= f.label :account_name %><br />
-        <%= f.text_field :account_name %>
+        <%= f.text_field :account_name, class:"form-control"%>
       </div>
     <% end %>
  
+     <div class ="form-group">
+       <%= f.label :name %><br />
+       <%= f.text_field :name, class:"form-control"%>
+     </div>
+           
 
-
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, class:"form-control",autocomplete: "off" %>
   </div>
 
 
 
 
-  <div class="field">
+  <div class="from-group">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation,class:"form-control", autocomplete: "off" %>
   </div>
 
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="float-left mt-3">
+    <%= f.submit "Sign up", class: "btn btn-primary" %>
   </div>
+
 <% end %>
+  </form>
+    </div>
+  </div>
+</div>
 
 
 
-<%= render "devise/shared/links" %>
