--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,31 +9,41 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light inverse">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse float-right" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <% if user_signed_in? %>
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <strong><%= current_user.email %></strong>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="<%=edit_user_registration_path%>">Edit profile</a>
-                <div class="dropdown-divider"></div>
-                <div class="dropdown-item"><%= link_to "Logout", destroy_user_session_path, method: :delete %></div>
-              </div>
-            <%else%>
-                <%= link_to "Sign up", new_user_registration_path, class:"navbar-link" %>|
-                <%= link_to "Login", new_user_session_path, class:"navbar-link "%>
-            <%end%>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <%= yield %>
+
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <b>Maropost</b>
+  </a>
+  <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse" type="button"></button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">
+          Home
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-md-auto">
+      <% if user_signed_in? %>
+        <li class="nav-item dropdown">
+          <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdown">
+            <%= current_user.name %>
+          </a>
+          <div aria-labelledby="navbarDropdown" class="dropdown-menu dropdown-menu-right">
+            <a class="dropdown-item" href="<%= edit_user_registration_path %>">Edit Profile</a>
+            <%= link_to 'Signout', destroy_user_session_path, method: "delete", class: "dropdown-item" %>
+          </div>
+        </li>
+      <% else %>
+          <%= link_to'Sign-up', new_user_registration_path, class: "nav-link" %>
+          <%= link_to'Log In', new_user_session_path, class: "nav-link" %>
+      <% end %>
+    </ul>
+  </div>
+</nav>
+<%= yield %>
 </body>
 </html>
