--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,4 @@
-     <a id="modal-3666010" href="#modal-container-3666010" role="button" class="btn btn-primary float-right" data-toggle="modal">Add Teams</a> 
-
+<a id="modal-3666010" href="#modal-container-3666010" role="button" class="btn btn-primary float-right mr-5 mt-3" data-toggle="modal">Add Members</a> 
                 <div class="modal fade" id="modal-container-3666010" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -9,37 +8,29 @@
                                     <span aria-hidden="true">×</span>
                                 </button>
                             </div>
-                            
                               <%= form_for :team , url: teams_get_user_path do |f|%> 
                                  <div class="modal-body">
-                               <% @users.each do |u| %>
-                                   <label class="form-check-label">
+                                     <% @users.each do |u| %>
+                                     <label class="form-check-label">
                                      <%= check_box_tag "ids[]", u.id %>
                                      <%= u.name %>
                                      <%= f.hidden_field :account_id , :value => @account.id %>
                                      <%= f.hidden_field :team_id, :value => @teams.id %>
-                                   </label>
-                                 <%end%>
+                                     </label>
+                                    <%end%>
                                        <div class="modal-footer">
                                         <%= f.submit "Add",class: "btn btn-success" %>
                                     </div>
-
                                 <% end %>
                             </div>
-
-                                  
-                                                                  
-                                                             </div>
+                          </div>
                         </div>
                     </div>
-                </div>
- 
+                </div> 
 
-
-
-
+                <h3 class="row d-flex justify-content-center mt-3"><%= @teams.Team_name %> Team-User</h3>
 <script src="https://drvic10k.github.io/bootstrap-sortable/Scripts/bootstrap-sortable.js"></script>
-<div class="row d-flex justify-content-center mt-5">
+<div class="row d-flex justify-content-center mt-3">
 
   <div class="col-md-10">
     <table class="table table-hover sortable border bg-light">
@@ -72,6 +63,7 @@
             <td class="col-5">
               <%= u.email %>
             </td>
+
           </tr>
         <% end %>
       </tbody>
