--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-
+  <body> 
+    <div class="container-fluid">
    <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <b>Maropost</b>
@@ -45,5 +45,6 @@
   </div>
 </nav>
 <%= yield %>
+    </div>
 </body>
 </html>
